--- a/docs/Calculator with Theme Toggle/style.css
+++ b/docs/Calculator with Theme Toggle/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-    background: linear-gradient(to right , rgba(244, 244, 244, 1),  rgba(43, 190, 243, 1));
+    background: linear-gradient(to right, rgba(244, 244, 244, 1), rgba(43, 190, 243, 1));
     width: 100vw;
     height: 100vh;
 }
@@ -28,7 +30,7 @@ body {
     margin-top: 30vh;
     width: 25vw;
     text-align: center;
-    background:linear-gradient(to right , rgb(149, 149, 235) , rgb(97, 197, 230));
+    background: linear-gradient(to right, rgb(149, 149, 235), rgb(97, 197, 230));
     box-shadow: 8px 8px 20px 0px #00000087;
     /* border: 10px solid; */
 }
@@ -44,11 +46,12 @@ body {
 .result {
     background-color: rgba(255, 255, 255, 0.564);
     padding: 10px 5px;
-    width: min(fit-content , 100%);
+    width: min(fit-content, 100%);
     overflow: auto;
     border-radius: 5px;
     font-size: large;
-     margin:0px auto 0px 0px;
+    margin: 0px auto 0px 0px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .box {
@@ -58,12 +61,14 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
-.opration{
+
+.opration {
     display: flex;
     gap: 10px;
     width: 100%;
 }
-.opration *{
+
+.opration * {
     width: 50px;
     height: 50px;
     background-color: rgba(255, 151, 40, 0.832);
@@ -72,15 +77,17 @@ body {
     font-weight: bolder;
     font-size: xx-large;
     border-radius: 5px;
-    box-shadow: 3px 3px 4px rgba(0, 40, 60, 0.805) ;
+    box-shadow: 3px 3px 4px rgba(0, 40, 60, 0.805);
     cursor: pointer;
     transition: all 0.5s;
 }
-.opration *:hover{
+
+.opration *:hover {
     background-color: rgba(243, 161, 10, 0.832);
     box-shadow: none;
 }
-.message{
+
+.message {
     justify-self: center;
     margin: 10px;
     padding: 5px 10px;
@@ -97,10 +104,10 @@ body {
 #tongal {
     justify-items: center;
     /* margin-top: 20vh; */
-     position: relative;
+    position: relative;
     justify-self: end;
-     right: 40px;
-      top: 40px;
+    right: 40px;
+    top: 40px;
 
 }
 
@@ -116,6 +123,7 @@ body {
     cursor: pointer;
     box-shadow: 3px 3px rgba(0, 0, 0, 0.378);
 }
+
 #box {
     align-self: center;
     height: 20px;
@@ -128,7 +136,7 @@ body {
     /* background-color: rgba(6, 50, 194, 0.425); */
     color: rgb(0, 62, 83);
     z-index: 1;
-    transform : translateX(-30%)
+    transform: translateX(-30%)
 }
 
 #text {
@@ -140,28 +148,31 @@ body {
     text-align: center;
     align-content: center;
     font-size: small;
-    transform :translateX(-50%)
+    transform: translateX(-50%)
 }
 
-@media only screen and (max-width:1400px){
-.container {
-    width: 30vw;
-    /* border: 10px solid; */
+@media only screen and (max-width:1400px) {
+    .container {
+        width: 30vw;
+        /* border: 10px solid; */
+    }
 }
+
+@media only screen and (max-width:1100px) {
+    .container {
+        width: 40vw;
+        /* border: 10px solid; */
+    }
 }
-@media only screen and (max-width:1100px){
-.container {
-    width: 40vw;
-    /* border: 10px solid; */
+
+@media only screen and (max-width:700px) {
+    .container {
+        width: 60vw;
+    }
 }
-}
-@media only screen and (max-width:700px){
-.container {
-    width: 60vw;
-}
-}
-@media only screen and (max-width:450px){
-.container {
-    width: 80vw;
-}
+
+@media only screen and (max-width:450px) {
+    .container {
+        width: 80vw;
+    }
 }
